Fixed table header miss alignment.

--- a/src/components/TableHeader/tableHeader.scss
+++ b/src/components/TableHeader/tableHeader.scss
@@ -32,7 +32,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        flex: 0 0 95%;
+        flex: 0 0 90%;
     }
 
     &__info-group-1 {
@@ -72,6 +72,9 @@
     }
 
     &__actions {
-        flex: 0 0 5%;
+        display: flex ;
+        justify-content: flex-end;
+        flex-direction: row;
+        flex: 0 0 10%;
     }
 }
